# embedded_udp_3phase

./: .gitignore  CMakeLists.txt  README.md  excludefile  getcmake.sh  udp_client  udp_client.c  udp_server  udp_server.c
embedded_udp_3phase/: README.md  environment.yml
embedded_udp_3phase/src/: threephasegenerator.c
ipynb/: udp_testing.ipynb
logs/: 25696.out  25698.out  26166.out  c25920.out  c25922.out  py26580.out  py27496.out  threephaseforwarder.out  threephasegenerator.out  udp_3phase.out
scripts/: liveplotter.py  plot_func.py  udp_3phase.py  udp_client.py  udp_server.py
src/: threephaseforwarder.c  threephasegenerator.c
